tests/fixtures/invalid/pow_list_float_set.py
# Cannot call pow() with List[int], Float, Set[int]
x = pow([1, 2, 3], 1.0, {1, 2, 3})
